ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-default-4
  annotations:
    alb.ingress.kubernetes.io/group.name: sarthak
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: dualstack
spec:
  ingressClassName: alb
  rules:
    - host: sarthak.sarthusofts.com
      http:
        paths:
          - path: /yellow
            pathType: Prefix
            backend:
              service:
                name: yellow-app
                port:
                  number: 80
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: red-app
                port:
                  number: 80
